[package]
name = "vault"
version = "0.1.0"
authors = ["Mark Meliksetyan <markmelix@gmail.com>"]
edition = "2018"

[lib]
name = "vault"
crate-type = ["cdylib"]

[dependencies]
argon2 = "0.2"
bincode = "1.3"
pbkdf2 = "0.12.2"
sha2 = "0.10.8"
bincode_aes = "1.0.1"

[dependencies.serde]
serde = "1.0"
features = ["derive"]

[dependencies.rand_core]
version = "0.6"
features = ["std"]

[dependencies.cpython]
version = "0.6"
features = ["extension-module"]
default-features = false
