[package]
name = "vault"
version = "0.1.0"
authors = ["Mark Meliksetyan <markmelix@gmail.com>"]
edition = "2018"

[lib]
name = "vault"
crate-type = ["cdylib"]

[dependencies]
argon2 = "0.2"
rsa = "0.4"
bincode = "1.3"
serde_yaml = "0.8.17"
openssl = "0.10"
flate2 = "1.0"
tar = "0.4"
tempfile = "3.2"

[dependencies.serde]
serde = "1.0"
features = ["derive"]

[dependencies.rand_core]
version = "0.6"
features = ["std"]

[dependencies.cpython]
version = "0.6"
features = ["extension-module"]
default-features = false
